# photofinder-next

./: .gitignore  SPEC.md  build.sh  index.html  package-lock.json  package.json  refactor-plan.md  train_vlad.py  vite.config.ts
scripts/: download-models.sh
src-tauri/: Cargo.toml  tauri.conf.json  test_yolo.rs
src-tauri/capabilities/: default.json
src-tauri/examples/: test_detect.rs  test_face_pipeline.rs  test_scrfd_raw.rs  test_search.rs
src-tauri/resources/models/: lightglue.onnx
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: image_classifier.rs  mod.rs
src-tauri/src/ai/debug/: mod.rs
src-tauri/src/ai/face/: align.rs  arcface.rs  detector.rs  mod.rs  pipeline.rs  quality.rs  real_face_classifier.rs
src-tauri/src/ai/lightglue/: lightglue.rs  mod.rs  superpoint.rs
src-tauri/src/category_search/: detector.rs  embedder.rs  index.rs  mod.rs  search.rs
src-tauri/src/core/: feature_extractor.rs  image_filter.rs  mod.rs  models.rs  processing.rs  queue.rs  scanner.rs  statistics.rs  thumbnail.rs
src-tauri/src/core/clustering/: mod.rs  person_cluster.rs
src-tauri/src/core/database/: faces.rs  images.rs  mod.rs  patches.rs  persons.rs  tasks.rs
src-tauri/src/core/features/: aggregation.rs  mod.rs  patch.rs
src-tauri/src/core/geometry/: mod.rs
src-tauri/src/core/index/: face_index.rs  hnsw.rs  mod.rs
src-tauri/src/search/: mod.rs  patch_search.rs  person_search.rs  test_patch_search.rs
src-tauri/src/tauri_cmd/: commands.rs
src-tauri/tests/: recall_test.rs  reference_detector.rs
src-tauri/tests/recall/: README.md  ground_truth.yaml
(+15 files in other folders)
