[package]
name = "photofinder-next"
version = "0.1.0"
description = "Local offline photo retrieval system with Person & Object search"
authors = ["you"]
edition = "2021"

[lib]
name = "photofinder_next_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "image-ico"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Image processing
image = "0.25"
kamadak-exif = "0.5"

# ONNX Runtime
ort = "2.0.0-rc.12"

# Async runtime
tokio = { version = "1", features = ["full"] }

# File system
walkdir = "2"
blake3 = "1"

# Thread pool
rayon = "1"
flume = "0.11"
num_cpus = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Directories
dirs = "5"
base64 = "0.22.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.release]
lto = false
codegen-units = 16
panic = "unwind"
strip = false
